🚀 Major Update: Universal Watermark Remover with Audio Preservation
✨ New Features:
- 🎵 Audio preservation during watermark removal
- 🎯 Dynamic watermark detection (Sora, moving logos)
- 🔍 Template matching with multi-scale detection
- 📊 Position smoothing and interpolation
- 🎨 Visualization tools for debugging

🛠️ Improvements:
- Complete audio processing toolkit (utils/audio_utils.py)
- Dynamic watermark detection module (utils/watermark_detection.py)
- Enhanced video_utils with audio support
- Updated main.py with --keep-audio flag

📚 Documentation:
- Technical analysis guide (WATERMARK_REMOVAL_ANALYSIS.md)
- Comprehensive usage examples (USAGE_EXAMPLES.md)
- Google Colab setup guide (COLAB_SETUP_GUIDE.md)
- Project modifications summary
- Updated README for universal video support

🔧 Technical:
- Fixed Colab dependency conflicts
- Updated for PyTorch 2.x and numpy 2.x compatibility
- Added Colab notebook with T4 GPU support
- GitHub integration for direct Colab access

🌟 Now supports: KLing, Sora, and ANY videos with watermarks!

--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,17 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Project-specific
+weights/
+test*.mp4
+test*/
+*_enhanced.mp4
+*_temp_*.mp4
+*_temp_*.aac
+debug_detection/
+demo/
+samples/
+
 # temporary files
 ## IDEA
 .idea/
